--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .login-image {
   width: 100%;
   height: 100vh;
@@ -23,4 +19,13 @@
   text-shadow: -2px 0 red, 0 2px red, 2px 0 red, 0 -2px red;
   color: white;
 
+}
+
+.full-container{
+  display: flex;
+  flex-direction: column;
+  margin: 2em;
+}
+.mr-1{
+  margin-right: 1em;
 }
