--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -15,17 +15,35 @@
   background-size: cover;
 }
 
-.home-page h1{
+.home-page h1 {
   text-shadow: -2px 0 red, 0 2px red, 2px 0 red, 0 -2px red;
   color: white;
 
 }
 
-.full-container{
+.full-container {
   display: flex;
   flex-direction: column;
   margin: 2em;
 }
-.mr-1{
+
+.mr-1 {
   margin-right: 1em;
+}
+
+.footer {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  background-color: rgb(66, 66, 241);
+
+}
+
+.footer a {
+  text-decoration: none;
+}
+
+.logo {
+  width: 90px;
+  margin-right: 1rem;
 }
